# Cold-user-recommendations-rutube

./: compose.yaml  package-lock.json
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/src/: api.py  app.py  database.py  schemas.py  service.py  settings.py
frontend/: README.md
frontend/src/: App.js
frontend/src/components/: body.js  navbar.js  post.js
frontend/src/components/svg/: like.js  rutube.js
frontend/src/styles/: body.css
frontend/src/utils/: handlerData.js
src/: index.js
src/components/: hotUser.js  post.js
src/components/svg/: add.js  burger.js  dislike.js  notification.js  search.js  sign.js
src/utils/: handlerData.js
