[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BeaverNotACat", email = "beavernotacat@gmail.com" }
]
dependencies = [
    "pydantic-settings>=2.5.2",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.9",
    "fastapi[standard]>=0.115.0",
    "aioboto3>=13.1.1",
    "pydantic>=2.9.2",
    "aiopg>=1.4.0",
    "pypika>=0.48.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
