[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BeaverNotACat", email = "beavernotacat@gmail.com" }
]
dependencies = [
    "pydantic-settings>=2.5.2",
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.2",
    # "pyspark[pandas_on_spark]>=3.5.3",
    "rectools>=0.8.0",
    "pandas>=2.2.3",
    "lightfm>=1.17"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
